PLATFORM-4285: fix for content tables too wide & get hidden

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -441,6 +441,8 @@ html, body {
 
     td {
       padding: 10px;
+      word-break: break-word;
+      min-width: 100px;
     }
 
     tr:last-child {
